# image_processor

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  image_processor.cpp  run_unit_tests.sh
bmp/: BmpReader.cpp  BmpReader.h  BmpWriter.cpp  BmpWriter.h
controller/: help.cpp  help.h  parser.cpp  parser.h  pipeline.cpp  pipeline.h
filters/: BlurFilter.cpp  BlurFilter.h  CropFilter.cpp  CropFilter.h  EdgeFilter.cpp  EdgeFilter.h  FilterBuilder.cpp  FilterBuilder.h  GrayscaleFilter.cpp  GrayscaleFilter.h  IFilter.h  MatrixFilter.cpp  MatrixFilter.h  NegativeFilter.cpp  NegativeFilter.h  PixelFilter.cpp  PixelFilter.h  SharpenFilter.cpp  SharpenFilter.h  SpiralFilter.cpp  SpiralFilter.h
image/: Color.cpp  Color.h  Image.cpp  Image.h
tests/: test.cpp
